--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,12 @@ a{
   background-color: #211ea0;
   color: #fff;
 }
+@media (max-width:1200px){
+    .container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .btn{
+        padding: 14px 22px;
+    }
+}
